--- a/src/components/SheenText.astro
+++ b/src/components/SheenText.astro
@@ -26,7 +26,7 @@ interface Props extends astroHTML.JSX.HTMLAttributes {
 
 const {
   text,
-  tag: Tag = 'span',
+  tag: Tag = "span",
   class: className,
   interval = 15,
   spread = 2,
@@ -38,29 +38,31 @@ const tokens = text.split(/( )/);
 ---
 
 <Tag
-  class:list={['sheen-text', className]}
+  class:list={["sheen-text", className]}
   data-sheen-interval={interval}
   data-sheen-spread={spread}
   data-sheen-ready
   {...attrs}
 >
-  {tokens.map((token) => {
-    if (token === ' ') {
-      return <span class="sheen-char">&nbsp;</span>;
-    }
+  {
+    tokens.map((token) => {
+      if (token === " ") {
+        return <span class="sheen-char">&nbsp;</span>;
+      }
 
-    if (token.length > 0) {
-      return (
-        <span class="sheen-word">
-          {[...token].map((char) => (
-            <span class="sheen-char">{char}</span>
-          ))}
-        </span>
-      );
-    }
+      if (token.length > 0) {
+        return (
+          <span class="sheen-word">
+            {[...token].map((char) => (
+              <span class="sheen-char">{char}</span>
+            ))}
+          </span>
+        );
+      }
 
-    return null;
-  })}
+      return null;
+    })
+  }
 </Tag>
 
 <script src="../scripts/sheen.ts"></script>
