--- a/src/styles/tokens/index.css
+++ b/src/styles/tokens/index.css
@@ -4,11 +4,11 @@
  * Import order matters: colours first (themes), then typography, then layout tokens.
  */
 
-@import './colours.css';
-@import './typography.css';
-@import './spacing.css';
-@import './sizing.css';
-@import './layout.css';
-@import './z-index.css';
-@import './transitions.css';
-@import './borders.css';
+@import "./colours.css";
+@import "./typography.css";
+@import "./spacing.css";
+@import "./sizing.css";
+@import "./layout.css";
+@import "./z-index.css";
+@import "./transitions.css";
+@import "./borders.css";
